2008-01-07  Samuel Tardieu  <tardieu@gostai.com>

	Include cstring to get memset().
	* sched.cc: <cstring> is needed for memset to be visible.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	Use if defined with config.h.
	This is not just a matter of style.  We already have been bitten
	by not using the "defined" part.
	* sched.cc: here.
	Also, use #elif, not #elsif.

2008-01-07  Matthieu Nottale  <nottale@gostai.com>

	Conditionaly include sys/mman.h.
	* sched.cc: Here.

2008-01-07  Matthieu Nottale  <nottale@gostai.com>

	sched: fallback to setpriority if sched_setscheduler unavailable.
	* sched.cc: Use setpriority if !sched_setscheduler. Also
	 call mlockall in all cases if available. Call lockstack in
	 all cases.

2008-01-07  Akim Demaille  <demaille@gostai.com>

	sched.hh.
	* sched.hh, sched.cc: New.
	* Makefile.am, libport-sources.mk: Adjust.

2008-01-07  Matthieu Nottale  <nottale@gostai.com>

	Typedef for utime() return type, move it into its own .cc.
	* libport-sources.mk: Add utime.cc
	* utime.cc: New. utime() implementation.
	* utime.hh: typedef return type.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	unref_traits.
	* select-ref.hh (unref_traits): New.

2008-01-04  Akim Demaille  <demaille@gostai.com>,
		  Guillaume Deslandes  <deslandes@gostai.com>

	GNU Make portability.
	* Makefile.am (check-local): Force the invocation of a shell.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Fix config.h uses.
	* Makefile.am (check-local): New.
	* unistd.h: Use libport's config.h.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Don't use maud_CPPFLAGS uselessly.
	* Makefile.am: So that Automake doesn't feel obliged to create
	special compilation rules with libport_la- prefixed object files.

2008-01-03  Akim Demaille  <demaille@gostai.com>,
		  Matthieu Nottale  <nottale@gosta.com>

	Solve an OSX issue: two remote components *can* overlap.
	* semaphore.hxx (Semaphore::Semaphore): Pass O_EXCL so
	that we never use twice the same sem.